# ComfyUI-QualityGate

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml
.github/workflows/: publish.yml
example_workflows/: composite_rank_demo.json  quality_filter_batch.json  qwen_FAST_generate_candidates.json  stage2_rank_folder.json
quality_checks/: __init__.py  base.py  body_proportion.py  face_presence.py  hands.py  identity.py  sharpness.py
tests/: test_body_proportion.py  test_cascade.py  test_hands_geometry.py  test_identity.py  test_nodes.py
tools/: diagnose_proportion3.py  diagnose_proportion4.py
