[project]
name = "comfyui-qualitygate"
version = "0.1.2"
description = "顔→人物生成でブレる頭サイズ比(頭幅/肩幅)と顔の一致を、参照に近い順へ自動ランキング。顔類似×頭サイズ比×鮮鋭度の合成スコアで選別し、合格分だけ納品するComfyUIカスタムノード。"
license = { file = "LICENSE" }
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
]
# opencv / numpy は ComfyUI 本体が同梱済みだが、単体利用のため明示する。
dependencies = [
    "opencv-python",
    "numpy",
]

[project.urls]
Repository = "https://github.com/nobu1990/ComfyUI-QualityGate"

[tool.comfy]
PublisherId = "nobu1990"
DisplayName = "ComfyUI-QualityGate"
requires-comfyui = ">=1.0.0"
